B003002_全楽曲取得BFF：新規作成
